Finished building basic initialization. Plugin should now be able to generate json configs and database connections.